--- a/app/src/main/res/layout/account_detal.xml
+++ b/app/src/main/res/layout/account_detal.xml
@@ -1,12 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_marginTop="10dp"
+    android:layout_marginLeft="15dp"
+    android:layout_marginRight="15dp"
     android:orientation="horizontal"
     android:background="@drawable/rect_gray"
     android:layout_width="match_parent"
     android:layout_height="160dp"
     android:weightSum="1"
-    android:elevation = "2dp"
+    android:elevation = "5dp"
     >
 
     <LinearLayout
