--- a/app/src/main/res/layout/account_header.xml
+++ b/app/src/main/res/layout/account_header.xml
@@ -4,7 +4,9 @@
     android:layout_width="match_parent"
     android:layout_height="60dp"
     android:background="@drawable/rect_gray"
-    android:elevation="2dp"
+    android:layout_marginLeft="15dp"
+    android:layout_marginRight="15dp"
+    android:elevation="5dp"
     android:orientation="horizontal"
     android:weightSum="1">
 
