--- a/app/src/main/res/layout/app_bar_main.xml
+++ b/app/src/main/res/layout/app_bar_main.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
 
-    tools:context="com.example.y1247.workdemo.Activity.MainActivity">
+    tools:context="com.example.y1247.moneyaccount.Activity.MainActivity">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
@@ -28,7 +28,6 @@
             android:layout_height="wrap_content"
             app:tabIndicatorColor="#ffffff"
             app:tabIndicatorHeight="3dp"
-
             />
 
 
