--- a/app/src/main/res/layout/stat_fragment.xml
+++ b/app/src/main/res/layout/stat_fragment.xml
@@ -12,7 +12,8 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="0.45"
-        android:elevation = "2dp"
+        android:elevation = "5dp"
+        android:padding="5dp"
         >
 
         <com.github.mikephil.charting.charts.PieChart
@@ -32,7 +33,7 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="0.4"
-        android:elevation = "2dp"
+        android:elevation = "5dp"
         >
 
         <com.github.mikephil.charting.charts.LineChart
