--- a/app/src/main/res/layout/timeline_fargment.xml
+++ b/app/src/main/res/layout/timeline_fargment.xml
@@ -9,7 +9,7 @@
     android:paddingRight="15dp"
 
 
-    tools:context=".Activity.MainActivity">
+    tools:context="com.example.y1247.moneyaccount.Activity.MainActivity">
 
 
     <android.support.v7.widget.RecyclerView
